kubernetes/order-service/service.yml
#Menggunakan service utama k8s pada objek ini
apiVersion: v1

#Denfenisikan jenis objek k8s sebagai service. Service merupakan cara mengekspos aplikasi berjalan pada cluster k8s
kind: Service

#Mendefinisikan identitas dari objek yaitu order 
metadata:
  name: order

#menentukan spesifikasi dari objek 
spec:
  #key selector berfungsi menentukan label untuk memilih pod mana yang ditargetkan dari service ini. 
  selector:
    #pada kasus ini service menargetkan pod degan label app:order
    app: order

  #menentukan pengaturan port untuk objek ini
  ports:
    - protocol: TCP
      #request dari port 80 akan diteruskan ke port 3000 
      port: 80
      targetPort: 3000

  #ClusterIP sebagai jenis service yang digunakan, hal ini berati service hanya dapat diaksses dari dalam cluster, melalui internal IP cluster
  type: ClusterIP
