kubernetes/order-service/gateway.yml
#versi API Istio yang digunakan dalam konfigurasi. Versi ini mengacu pada v1beta1 dari API Istio untuk Gateway.
apiVersion: networking.istio.io/v1beta1

#jenis objek k8s adalah gateway untuk konfigurasi lalu lintas kluster kubernetes dikelola oleh istio
kind: Gateway

#mengatur identitas dari objek k8s
metadata:
  #Nama objek k8s ini adalah order-gateway
  name: order-gateway
  #Mengatur namespace objek berada yaitu di istio-system
  namespace: istio-system

#mengatur spesifikasi dari obyek k8s
spec:
  #memilih entitas yang akan menerima lalulintas, dalam hal ini ingressgateway untuk menangani ingress traffic.
  selector:
    istio: ingressgateway

  #Mendefinisikan server yang menerima lalu lintas masuk
  servers:
  # Gateway akan menerima permintaan dari semua host (Wildcard)
  - hosts:
    - "*"

    port:
      name: http  # Nama port, dalam hal ini "http"
      number: 80  # Nomor port yang akan digunakan (80 untuk protokol HTTP)
      protocol: HTTP  # Protokol yang akan digunakan (HTTP)
